# ot_cli

./: CMakeLists.txt  coap_LED_client.py  coap_core_client.py  coap_server.py  listener.py  sdkconfig  sdkconfig.defaults  sdkconfig.old
br_config/: sdkconfig  sdkconfig.old
main/: CMakeLists.txt  esp_ot_cli.cpp  idf_component.yml  sensor_loop_utils.h
